--- a/ansible/roles/create_proxy/templates/nginx.conf.j2
+++ b/ansible/roles/create_proxy/templates/nginx.conf.j2
@@ -1,5 +1,30 @@
-{% for cfg in gozinc_config_files %}
-location /{{ cfg.name }}/ {
-  proxy_pass http://127.0.0.1:{{ cfg.port }}/;
+events {}
+
+http {
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+  }
+
+  server {
+    listen 80 default_server;
+    server_name _;
+    port_in_redirect off;
+    {% for cfg in users %}
+
+    location /{{ cfg.name }}/ {
+      proxy_pass http://127.0.0.1:{{ cfg.port }}/{{ cfg.name }}/;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header X-Scheme $scheme;
+
+      proxy_buffering off;
+    }
+    {% endfor %}
+  }
 }
-{% endfor %}
